--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,7 @@
     </dependencies>
 
     <build>
+             <defaultGoal>compile</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
